force-app/main/default/objects/Review__c/fields/Rating_Research__c.field-meta.xml
<CustomField>
    <fullName>Rating_Research__c</fullName>
    <inlineHelpText>Test - Rating - Research</inlineHelpText>
    <label>Rating - Research</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>