force-app/main/default/objects/Review__c/fields/Rating_Story_Telling__c.field-meta.xml
<CustomField>
    <fullName>Rating_Story_Telling__c</fullName>
    <inlineHelpText>test -Rating - Story Telling</inlineHelpText>
    <label>Rating - Story Telling</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>