force-app/main/default/objects/Review__c/fields/Rating_Writing_Style__c.field-meta.xml
<CustomField>
    <fullName>Rating_Writing_Style__c</fullName>
    <inlineHelpText>test - Rating - Writing Style</inlineHelpText>
    <label>Rating - Writing Style</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>