force-app/main/default/objects/Review__c/validationRules/Rating1_between_1_and_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating1_between_1_and_5</fullName>
    <active>true</active>
    <errorConditionFormula>Rating_Research__c  &lt; 1 || Rating_Research__c  &gt; 5</errorConditionFormula>
    <errorDisplayField>Rating_Research__c</errorDisplayField>
    <errorMessage>Rating should be between 1 and 5</errorMessage>
</ValidationRule>